# ARU-UCTDB-MCU

./: .gitignore  .gitmodules  .mxproject  ARU-UCTDB-MCU.ioc  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake.yml
CMake/: arm-none-eabi.cmake  mcu.cmake  scripts.cmake
CubeMX/: Makefile  README.md
Inc/: init.h  main.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
Lib/: CMakeLists.txt
Lib/TC74/Inc/: TC74_I2C.hpp
Lib/TC74/Src/: TC74_I2C.cpp
Modules/: CMakeLists.txt
Src/: init.c  main.c  main.cpp  stm32f0xx_hal_msp.c  stm32f0xx_it.c  system_stm32f0xx.c
