if(CMAKE_CROSSCOMPILING)
	set(STM32CUBEF0_HAL_INCLUDE_DIRECTORIES
		${CMAKE_CURRENT_SOURCE_DIR}/STM32CubeF0/Drivers/STM32F0xx_HAL_Driver/Inc
		${CMAKE_CURRENT_SOURCE_DIR}/STM32CubeF0/Drivers/STM32F0xx_HAL_Driver/Inc/Legacy
		${CMAKE_CURRENT_SOURCE_DIR}/STM32CubeF0/Drivers/CMSIS/Device/ST/STM32F0xx/Include
		${CMAKE_CURRENT_SOURCE_DIR}/STM32CubeF0/Drivers/CMSIS/Include
		${CMAKE_SOURCE_DIR}/Inc
	)

	file(GLOB STM32CUBEF0_HAL_SOURCES
		STM32CubeF0/Drivers/STM32F0xx_HAL_Driver/Src/*_hal*.c
	)

	# Workaround - Broken template files should not be compiled.
	list(FILTER STM32CUBEF0_HAL_SOURCES EXCLUDE REGEX ".*_template.c")

	add_library(STM32CubeF0_HAL STATIC
		${STM32CUBEF0_HAL_SOURCES}
	)

	set(STM32CUBEF0_HAL_COMPILE_DEFINITIONS
		USE_HAL_DRIVER
		STM32F051x8
	)
	
	target_compile_definitions(STM32CubeF0_HAL PUBLIC 
		${STM32CUBEF0_HAL_COMPILE_DEFINITIONS}
	)

	target_include_directories(STM32CubeF0_HAL SYSTEM PUBLIC
		${STM32CUBEF0_HAL_INCLUDE_DIRECTORIES}
	)
endif()